--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
-version: '3.3'
+version: '3.8'
 services:
     db:
         image: postgres:latest
+        restart: always
         env_file: envs/dev.env
         ports:
             - 5432:5432
+        volumes:
+            - kompose:/var/lib/postgresql/data
 
     migration:
         build: .
+        image: kompose_image
         env_file: envs/dev.env
         command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py migrate'
-        
+
         stdin_open: true
         tty: true
 
@@ -18,14 +22,22 @@ services:
             - db
 
     web:
+        image: kompose_image
         env_file: envs/dev.env
         command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py runserver 0.0.0.0:8000'
-        
+
         stdin_open: true
         tty: true
+        volumes:
+            - .:/code
+
         ports:
-            - 8000:8001
+            - 8000:8000
 
         depends_on:
             - db
             - migration
+
+volumes:
+    kompose:
+        external: true
