--- a/envs/dev.env
+++ b/envs/dev.env
@@ -1,3 +1,7 @@
-DB=kompose
-USER=user
-PASSWORD=password
+POSTGRES_DB=kompose
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+
+SECRET_KEY="django-insecure--%^o^f1ju^5(&48b%3whbs@pzh1*uk@8m7t!k5_+yi@b!uncx2"
+
+DEBUG='True'
