--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "kompose"
-version = "0.5.0"
+version = "1.0.0"
 description = ""
 authors = ["Jefte Keller <kellergnr@gmail.com>"]
 
@@ -12,6 +12,8 @@ djangorestframework = "==3.12.4"
 pytz = "==2021.1"
 sqlparse = "==0.4.1"
 coverage = "^5.5"
+python-dotenv = "^0.18.0"
+dj-database-url = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.6b0", allow-prereleases = true}
