--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-asgiref==3.3.4
-Django==3.2
-djangorestframework==3.12.4
+asgiref==3.3.4; python_version >= "3.6"
+coverage==5.5; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
+dj-database-url==0.5.0
+django==3.2; python_version >= "3.6"
+djangorestframework==3.12.4; python_version >= "3.5"
+python-dotenv==0.18.0
 pytz==2021.1
-sqlparse==0.4.1
+sqlparse==0.4.1; python_version >= "3.5"
