--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ Django Tests:
     variables:
         TEST: "TEST"
         DEBUG: "True"
+        SECRET_KEY: "django-insecure--%^o^f1ju^5(&48b%3whbs@pzh1*uk@8m7t!k5_+yi@b!uncx2"
 
     script:
         - coverage run -m manage test -v 3
