--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,14 @@
-image: python:3.9
-
 stages:
     - testing
     - deploy
 
-before_script:
-    - python -V
-    - python -m pip install -r requirements.txt
-
 Django Tests:
     stage: testing
+    image: python:3.9
+
+    before_script:
+        - python -V
+        - python -m pip install -r requirements.txt
 
     variables:
         TEST: "TEST"
@@ -24,6 +23,7 @@ Django Tests:
 
 Deploy Heroku:
     stage: deploy
+    image: alpine:latest
 
     script:
         - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:master
