--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ Django Tests:
 
 Deploy Heroku:
     stage: deploy
-    image: alpine:latest
+    image: alpine/git:latest
 
     script:
         - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:master
