fix: added commands to verify code coverage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ Django Tests:
 
     script:
         - coverage run -m manage test -v 3
+        - coverage report
 
     only:
         - merge_request
